--- a/configuration/experiment_runs2.yml
+++ b/configuration/experiment_runs2.yml
@@ -1,5 +1,5 @@
-- dataset: breastcancer
-  model: gandalf
+- dataset: creditcard
+  model: tabtransformer
   best_params: {}
   param_grid:
     outer_params: &id001
@@ -8,22 +8,44 @@
       precision: 16
       max_epochs: 1000
       val_size: 0.15
-      early_stopping_patience: 10
+      early_stopping_patience: 8
     batch_size: &id002
-    - 32
-    - 64
-    - 128
-    - 256
-    gflu_stages: &id003
+    - 1024
+    - 2048
+    - 4096
+    embedding_bias: &id003
+    - true
+    - false
+    embedding_initialization: &id004
+    - kaiming_uniform
+    - kaiming_normal
+    shared_embedding_fraction: &id005
+    - 0.125
+    - 0.25
+    - 0.5
+    num_attn_blocks: &id006
     - 4
     - 10
-    gflu_dropout: &id004
-    - 0.0
+    attn_dropout: &id007
+    - 0.05
     - 0.3
-    embedding_dropout: &id005
-    - 0.0
+    add_norm_dropout: &id008
+    - 0.05
     - 0.3
-    optimizer_fn: &id006
+    ff_dropout: &id009
+    - 0.05
+    - 0.3
+    ff_hidden_multiplier: &id010
+    - 2
+    - 6
+    transformer_activation: &id011
+    - GEGLU
+    - ReGLU
+    - SwiGLU
+    embedding_dropout: &id012
+    - 0.05
+    - 0.3
+    optimizer_fn: &id013
       Adam:
         weight_decay:
         - 0.0001
@@ -32,7 +54,7 @@
         weight_decay:
         - 0.0001
         - 1.0e-05
-    scheduler_fn: &id007
+    scheduler_fn: &id014
       ReduceLROnPlateau:
         factor:
         - 0.1
@@ -44,70 +66,31 @@
         gamma:
         - 0.9
         - 0.99
-- dataset: ageconditions
+- dataset: covertype
   model: gandalf
   best_params: {}
   param_grid:
-    outer_params: *id001
-    batch_size: *id002
-    gflu_stages: *id003
-    gflu_dropout: *id004
-    embedding_dropout: *id005
-    optimizer_fn: *id006
-    scheduler_fn: *id007
-- dataset: breastcancer
-  model: fttransformer
-  best_params: {}
-  param_grid:
-    outer_params: &id008
+    outer_params: &id015
       hyperopt_evals: 50
       auto_lr_find: true
       precision: 16
       max_epochs: 1000
       val_size: 0.15
-      early_stopping_patience: 10
-      attn_feature_importance: false
-    batch_size: &id009
-    - 32
-    - 64
-    - 128
-    - 256
-    num_heads: &id010
+      early_stopping_patience: 8
+    batch_size: &id016
+    - 1024
+    - 2048
+    - 4096
+    gflu_stages: &id017
     - 4
     - 10
-    input_embed_dim_multiplier: &id011
-    - 2
-    - 6
-    embedding_initialization: &id012
-    - kaiming_uniform
-    - kaiming_normal
-    embedding_dropout: &id013
-    - 0.05
-    - 0.2
-    shared_embedding_fraction: &id014
-    - 0.125
-    - 0.25
-    - 0.5
-    num_attn_blocks: &id015
-    - 4
-    - 8
-    attn_dropout: &id016
-    - 0.05
-    - 0.2
-    add_norm_dropout: &id017
-    - 0.05
-    - 0.2
-    ff_dropout: &id018
-    - 0.05
-    - 0.2
-    ff_hidden_multiplier: &id019
-    - 4
-    - 32
-    transformer_activation: &id020
-    - GEGLU
-    - ReGLU
-    - SwiGLU
-    optimizer_fn: &id021
+    gflu_dropout: &id018
+    - 0.0
+    - 0.3
+    embedding_dropout: &id019
+    - 0.0
+    - 0.3
+    optimizer_fn: &id020
       Adam:
         weight_decay:
         - 0.0001
@@ -116,7 +99,7 @@
         weight_decay:
         - 0.0001
         - 1.0e-05
-    scheduler_fn: &id022
+    scheduler_fn: &id021
       ReduceLROnPlateau:
         factor:
         - 0.1
@@ -128,82 +111,32 @@
         gamma:
         - 0.9
         - 0.99
-- dataset: ageconditions
-  model: fttransformer
-  best_params: {}
-  param_grid:
-    outer_params: *id008
-    batch_size: *id009
-    num_heads: *id010
-    input_embed_dim_multiplier: *id011
-    embedding_initialization: *id012
-    embedding_dropout: *id013
-    shared_embedding_fraction: *id014
-    num_attn_blocks: *id015
-    attn_dropout: *id016
-    add_norm_dropout: *id017
-    ff_dropout: *id018
-    ff_hidden_multiplier: *id019
-    transformer_activation: *id020
-    optimizer_fn: *id021
-    scheduler_fn: *id022
-- dataset: iris
-  model: fttransformer
-  best_params: {}
-  param_grid:
-    outer_params: *id008
-    batch_size: *id009
-    num_heads: *id010
-    input_embed_dim_multiplier: *id011
-    embedding_initialization: *id012
-    embedding_dropout: *id013
-    shared_embedding_fraction: *id014
-    num_attn_blocks: *id015
-    attn_dropout: *id016
-    add_norm_dropout: *id017
-    ff_dropout: *id018
-    ff_hidden_multiplier: *id019
-    transformer_activation: *id020
-    optimizer_fn: *id021
-    scheduler_fn: *id022
-- dataset: titanic
-  model: gandalf
+- dataset: covertype
+  model: tabtransformer
   best_params: {}
   param_grid:
     outer_params: *id001
     batch_size: *id002
-    gflu_stages: *id003
-    gflu_dropout: *id004
-    embedding_dropout: *id005
-    optimizer_fn: *id006
-    scheduler_fn: *id007
-- dataset: iris
+    embedding_bias: *id003
+    embedding_initialization: *id004
+    shared_embedding_fraction: *id005
+    num_attn_blocks: *id006
+    attn_dropout: *id007
+    add_norm_dropout: *id008
+    ff_dropout: *id009
+    ff_hidden_multiplier: *id010
+    transformer_activation: *id011
+    embedding_dropout: *id012
+    optimizer_fn: *id013
+    scheduler_fn: *id014
+- dataset: creditcard
   model: gandalf
   best_params: {}
   param_grid:
-    outer_params: *id001
-    batch_size: *id002
-    gflu_stages: *id003
-    gflu_dropout: *id004
-    embedding_dropout: *id005
-    optimizer_fn: *id006
-    scheduler_fn: *id007
-- dataset: titanic
-  model: fttransformer
-  best_params: {}
-  param_grid:
-    outer_params: *id008
-    batch_size: *id009
-    num_heads: *id010
-    input_embed_dim_multiplier: *id011
-    embedding_initialization: *id012
-    embedding_dropout: *id013
-    shared_embedding_fraction: *id014
-    num_attn_blocks: *id015
-    attn_dropout: *id016
-    add_norm_dropout: *id017
-    ff_dropout: *id018
-    ff_hidden_multiplier: *id019
-    transformer_activation: *id020
-    optimizer_fn: *id021
-    scheduler_fn: *id022
+    outer_params: *id015
+    batch_size: *id016
+    gflu_stages: *id017
+    gflu_dropout: *id018
+    embedding_dropout: *id019
+    optimizer_fn: *id020
+    scheduler_fn: *id021
