--- a/configuration/experiment_runs3.yml
+++ b/configuration/experiment_runs3.yml
@@ -90,8 +90,77 @@
     transformer_activation: *id013
     optimizer_fn: *id014
     scheduler_fn: *id015
-- dataset: creditcard
+- dataset: covertype
   model: tabtransformer
+  best_params: {}
+  param_grid:
+    outer_params:
+      hyperopt_evals: 50
+      auto_lr_find: true
+      precision: 16
+      tol: 1.0e-05
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 8
+    batch_size:
+    - 1024
+    - 2048
+    - 4096
+    embedding_bias:
+    - true
+    - false
+    embedding_initialization:
+    - kaiming_uniform
+    - kaiming_normal
+    shared_embedding_fraction:
+    - 0.125
+    - 0.25
+    - 0.5
+    num_attn_blocks:
+    - 4
+    - 10
+    attn_dropout:
+    - 0.05
+    - 0.3
+    add_norm_dropout:
+    - 0.05
+    - 0.3
+    ff_dropout:
+    - 0.05
+    - 0.3
+    ff_hidden_multiplier:
+    - 2
+    - 6
+    transformer_activation:
+    - GEGLU
+    - ReGLU
+    - SwiGLU
+    embedding_dropout:
+    - 0.05
+    - 0.3
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: creditcard
+  model: tabnet
   best_params: {}
   param_grid:
     outer_params: &id016
@@ -102,43 +171,37 @@
       max_epochs: 1000
       val_size: 0.15
       early_stopping_patience: 8
-    batch_size: &id017
-    - 1024
-    - 2048
-    - 4096
-    embedding_bias: &id018
-    - true
-    - false
-    embedding_initialization: &id019
-    - kaiming_uniform
-    - kaiming_normal
-    shared_embedding_fraction: &id020
+    virtual_batch_size_ratio: &id017
     - 0.125
     - 0.25
     - 0.5
-    num_attn_blocks: &id021
-    - 4
-    - 10
-    attn_dropout: &id022
-    - 0.05
-    - 0.3
-    add_norm_dropout: &id023
-    - 0.05
-    - 0.3
-    ff_dropout: &id024
-    - 0.05
-    - 0.3
-    ff_hidden_multiplier: &id025
-    - 2
+    - 1.0
+    batch_size: &id018
+    - 1024
+    - 2048
+    - 4096
+    weights: &id019
+    - 0
+    - 1
+    mask_type: &id020
+    - sparsemax
+    - entmax
+    n_d: &id021
     - 6
-    transformer_activation: &id026
-    - GEGLU
-    - ReGLU
-    - SwiGLU
-    embedding_dropout: &id027
-    - 0.05
-    - 0.3
-    optimizer_fn: &id028
+    - 32
+    n_steps: &id022
+    - 1
+    - 6
+    gamma: &id023
+    - 1.0
+    - 2.0
+    n_independent: &id024
+    - 1
+    - 3
+    n_shared: &id025
+    - 1
+    - 3
+    optimizer_fn: &id026
       Adam:
         weight_decay:
         - 0.0001
@@ -147,7 +210,7 @@
         weight_decay:
         - 0.0001
         - 1.0e-05
-    scheduler_fn: &id029
+    scheduler_fn: &id027
       ReduceLROnPlateau:
         factor:
         - 0.1
@@ -160,99 +223,18 @@
         - 0.9
         - 0.99
 - dataset: covertype
-  model: tabtransformer
+  model: tabnet
   best_params: {}
   param_grid:
     outer_params: *id016
-    batch_size: *id017
-    embedding_bias: *id018
-    embedding_initialization: *id019
-    shared_embedding_fraction: *id020
-    num_attn_blocks: *id021
-    attn_dropout: *id022
-    add_norm_dropout: *id023
-    ff_dropout: *id024
-    ff_hidden_multiplier: *id025
-    transformer_activation: *id026
-    embedding_dropout: *id027
-    optimizer_fn: *id028
-    scheduler_fn: *id029
-- dataset: creditcard
-  model: tabnet
-  best_params: {}
-  param_grid:
-    outer_params: &id030
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      tol: 1.0e-05
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
-    virtual_batch_size_ratio: &id031
-    - 0.125
-    - 0.25
-    - 0.5
-    - 1.0
-    batch_size: &id032
-    - 1024
-    - 2048
-    - 4096
-    weights: &id033
-    - 0
-    - 1
-    mask_type: &id034
-    - sparsemax
-    - entmax
-    n_d: &id035
-    - 6
-    - 32
-    n_steps: &id036
-    - 1
-    - 6
-    gamma: &id037
-    - 1.0
-    - 2.0
-    n_independent: &id038
-    - 1
-    - 3
-    n_shared: &id039
-    - 1
-    - 3
-    optimizer_fn: &id040
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn: &id041
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: covertype
-  model: tabnet
-  best_params: {}
-  param_grid:
-    outer_params: *id030
-    virtual_batch_size_ratio: *id031
-    batch_size: *id032
-    weights: *id033
-    mask_type: *id034
-    n_d: *id035
-    n_steps: *id036
-    gamma: *id037
-    n_independent: *id038
-    n_shared: *id039
-    optimizer_fn: *id040
-    scheduler_fn: *id041
+    virtual_batch_size_ratio: *id017
+    batch_size: *id018
+    weights: *id019
+    mask_type: *id020
+    n_d: *id021
+    n_steps: *id022
+    gamma: *id023
+    n_independent: *id024
+    n_shared: *id025
+    optimizer_fn: *id026
+    scheduler_fn: *id027
